feat: Implement flight scheduling feature with route and spacecraft selection
- Added RouteService methods for fetching routes and creating routes.
- Introduced SpacecraftService for fetching operational spacecraft options.
- Created frontend components for scheduling flights, including forms and previews.
- Implemented JavaScript logic for handling flight scheduling, including validation and API integration.
- Enhanced CSS styles for the new flight scheduling interface.
- Updated index.html to include a hidden admin link for navigation.