@@ -1,53 +1,67 @@
 package com.yspace.backend.service;
 
-
+import com.yspace.backend.dto.route.RouteAdminResponseDto;
+import com.yspace.backend.dto.route.AdminRouteResponseDto;
 import com.yspace.backend.dto.route.CreateRouteRequestDto;
 import com.yspace.backend.dto.route.FetchRouteResponseDto;
-import com.yspace.backend.dto.RouteAdminResponseDto;
 import com.yspace.backend.exceptions.SpaceportNotFoundException;
 import com.yspace.backend.mapper.RouteMapper;
 import com.yspace.backend.model.Route;
 import com.yspace.backend.model.Spaceport;
 import com.yspace.backend.repository.RouteRepository;
 import com.yspace.backend.repository.SpaceportRepository;
+import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
+import org.springframework.transaction.annotation.Transactional;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
+@RequiredArgsConstructor
 public class RouteService {
+
     private final RouteMapper routeMapper;
     private final RouteRepository routeRepository;
     private final SpaceportRepository spaceportRepository;
 
-    public RouteService(RouteRepository routeRepository, RouteMapper routeMapper, SpaceportRepository spaceportRepository) {
-        this.routeRepository = routeRepository;
-        this.routeMapper = routeMapper;
-        this.spaceportRepository = spaceportRepository;
-    }
-
+    @Transactional(readOnly = true)
     public List<FetchRouteResponseDto> fetchAllRoutes(String keyword) {
         if (keyword == null || keyword.isBlank()) {
             return routeRepository.findAll()
                     .stream()
                     .map(routeMapper::toDto)
-                    .collect(Collectors.toList());
-        } else {
-            return searchRoutes(keyword);
+                    .toList();
         }
 
+        return searchRoutes(keyword);
     }
 
+    @Transactional(readOnly = true)
     public List<FetchRouteResponseDto> searchRoutes(String keyword) {
         return routeRepository.fetchByKeyword(keyword)
                 .stream()
                 .map(routeMapper::toDto)
-                .collect(Collectors.toList());
+                .toList();
     }
 
-    public RouteAdminResponseDto createRoute(CreateRouteRequestDto request) {
+    @Transactional(readOnly = true)
+    public List<AdminRouteResponseDto> getAdminRouteOptions() {
+        return routeRepository.findAll()
+                .stream()
+                .map(route -> new AdminRouteResponseDto(
+                        route.getId(),
+                        route.getName(),
+                        route.getOriginSpaceport().getName(),
+                        route.getOriginSpaceport().getCode(),
+                        route.getDestinationSpaceport().getName(),
+                        route.getDestinationSpaceport().getCode(),
+                        route.getDistance()
+                ))
+                .toList();
+    }
 
+    @Transactional
+    public RouteAdminResponseDto createRoute(CreateRouteRequestDto request) {
         if (request.getOriginSpaceportId().equals(request.getDestinationSpaceportId())) {
             throw new IllegalArgumentException(
                     "Origin and destination spaceports cannot be the same"
@@ -64,10 +78,18 @@ public class RouteService {
         }
 
         Spaceport origin = spaceportRepository.findById(request.getOriginSpaceportId())
-                .orElseThrow(() -> new SpaceportNotFoundException(request.getOriginSpaceportId()));
+                .orElseThrow(
+                        () -> new SpaceportNotFoundException(
+                                request.getOriginSpaceportId()
+                        )
+                );
 
         Spaceport destination = spaceportRepository.findById(request.getDestinationSpaceportId())
-                .orElseThrow(() -> new SpaceportNotFoundException(request.getDestinationSpaceportId()));
+                .orElseThrow(
+                        () -> new SpaceportNotFoundException(
+                                request.getDestinationSpaceportId()
+                        )
+                );
 
         Route route = Route.builder()
                 .name(request.getName())
